{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 97,
  "lineage": "00dbd873-d212-6a74-956d-722f4703fdd1",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "pb_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085f9c64a9b75eed5",
            "arn": "arn:aws:ec2:us-east-2:326151034032:instance/i-09e40cc55196058a1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "pb-ec2-instance-profile",
            "id": "i-09e40cc55196058a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-088554e58fe3dcff3",
            "private_dns": "ip-10-0-1-64.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "public_dns": "ec2-18-117-8-207.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.8.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e64c44a74a85cdd",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ded868cea5445bba",
            "tags": {
              "Name": "pb-web-server-0"
            },
            "tags_all": {
              "Name": "pb-web-server-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e9e907be29be6e3"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.pb_ec2_profile",
            "module.iam.aws_iam_role.pb_ec2_role",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.pb_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-085f9c64a9b75eed5",
            "arn": "arn:aws:ec2:us-east-2:326151034032:instance/i-02cce5ca02755bd79",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "pb-ec2-instance-profile",
            "id": "i-02cce5ca02755bd79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f141298419b98ac",
            "private_dns": "ip-10-0-2-190.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.190",
            "public_dns": "ec2-3-21-114-197.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.114.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-076ee719a4a78c52c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06fe956a07c4240eb",
            "tags": {
              "Name": "pb-web-server-1"
            },
            "tags_all": {
              "Name": "pb-web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e9e907be29be6e3"
            ]
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.pb_ec2_profile",
            "module.iam.aws_iam_role.pb_ec2_role",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.pb_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:security-group/sg-011dd14314cfc1da1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011dd14314cfc1da1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240826124634846000000002",
            "name_prefix": "terraform-",
            "owner_id": "326151034032",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pb_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:internet-gateway/igw-0eddb12930fd105b7",
            "id": "igw-0eddb12930fd105b7",
            "owner_id": "326151034032",
            "tags": {
              "Name": "pb-internet-gateway"
            },
            "tags_all": {
              "Name": "pb-internet-gateway"
            },
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pb_public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:route-table/rtb-0c4660404f19d775a",
            "id": "rtb-0c4660404f19d775a",
            "owner_id": "326151034032",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eddb12930fd105b7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pb-public-route-table"
            },
            "tags_all": {
              "Name": "pb-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.pb_igw",
            "module.vpc.aws_vpc.pb_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:subnet/subnet-0665f8bd911c42aed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0665f8bd911c42aed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-private-subnet-0"
            },
            "tags_all": {
              "Name": "pb-private-subnet-0"
            },
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pb_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:subnet/subnet-0f912c473d23578f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f912c473d23578f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-private-subnet-1"
            },
            "tags_all": {
              "Name": "pb-private-subnet-1"
            },
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pb_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:subnet/subnet-0ded868cea5445bba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ded868cea5445bba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-public-subnet-0"
            },
            "tags_all": {
              "Name": "pb-public-subnet-0"
            },
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pb_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:subnet/subnet-06fe956a07c4240eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06fe956a07c4240eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "326151034032",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pb-public-subnet-1"
            },
            "tags_all": {
              "Name": "pb-public-subnet-1"
            },
            "vpc_id": "vpc-0a2fcc2d3f32e78dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.pb_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pb_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:326151034032:vpc/vpc-0a2fcc2d3f32e78dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0472e2d6607f778df",
            "default_route_table_id": "rtb-073a46f92e2e29d3f",
            "default_security_group_id": "sg-03e9e907be29be6e3",
            "dhcp_options_id": "dopt-055d2503ea8b59a30",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a2fcc2d3f32e78dc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-073a46f92e2e29d3f",
            "owner_id": "326151034032",
            "tags": {
              "Name": "pb-vpc"
            },
            "tags_all": {
              "Name": "pb-vpc"
            }
          }
        }
      ]
    }
  ]
}